<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/sky">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        style="@style/WidgetTitle"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:paddingTop="16dp"
                android:id="@+id/widget_launch_play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/describe_widget_play"
                android:src="@drawable/ic_tree" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|center"
                android:text="@string/widget_play"
                style="@style/WidgetLabel"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:paddingTop="16dp"
                android:id="@+id/widget_launch_record"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/describe_widget_record"
                android:src="@drawable/ic_tree_record" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|center"
                android:text="@string/widget_record"
                style="@style/WidgetLabel"/>
        </FrameLayout>

    </LinearLayout>
    <TextView
        android:id="@+id/widget_info"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/widget_info"
        android:gravity="center"
        style="@style/WidgetInfo"/>

</LinearLayout>