<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sky"
    tools:context=".RecordActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@null"
        android:src="@drawable/ic_tree_canopy"
        android:scaleType="centerCrop"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

    <TextView
        android:id="@+id/record_title"
        style="@style/RecordTitle"
        android:paddingTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/not_specified"
        android:layout_gravity="top|center"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

    <!-- keepScreenOn from "Keep the device awake", Android Developers:
    https://developer.android.com/training/scheduling/wakelock. -->
    <TextView
        android:id="@+id/record_on_off_air"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/record_off_air"
        android:keepScreenOn="true"
        android:gravity="center"
        style="@style/OnOffAir"
        android:elevation="2dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

    <TextView
        android:id="@+id/record_date_and_time"
        style="@style/RecordSubtitle"
        android:paddingBottom="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/not_specified"
        android:layout_gravity="bottom|center"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/stop_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:contentDescription="@string/describe_fab_stop"
        app:srcCompat="@drawable/ic_stop"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>