<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sky"
    tools:context=".DetailsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_tree_canopy_close"
                android:contentDescription="@null"
                app:layout_constraintDimensionRatio="3.5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- https://github.com/chrisjenx/Calligraphy/issues/316 -->
            <EditText
                android:id="@+id/species"
                style="@style/DetailsInfo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@null"
                android:inputType="text"
                android:importantForAutofill="no"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:hint="@string/species_hint"
                tools:text="@string/not_specified" />

            <EditText
                android:id="@+id/title"
                style="@style/DetailsInfo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@null"
                android:inputType="text"
                android:importantForAutofill="no"
                app:layout_constraintEnd_toEndOf="@+id/species"
                app:layout_constraintStart_toStartOf="@+id/species"
                app:layout_constraintTop_toBottomOf="@+id/species"
                android:hint="@string/title_hint"
                tools:text="@string/not_specified" />

            <EditText
                android:id="@+id/notes"
                style="@style/DetailsInfo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@null"
                android:inputType="text|textMultiLine"
                android:singleLine="false"
                android:importantForAutofill="no"
                app:layout_constraintEnd_toEndOf="@+id/title"
                app:layout_constraintStart_toStartOf="@+id/title"
                app:layout_constraintTop_toBottomOf="@+id/title"
                android:hint="@string/notes_hint"
                tools:text="@string/not_specified"/>

            <TextView
                android:id="@+id/date_and_time"
                style="@style/DetailsInfo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="@+id/notes"
                app:layout_constraintStart_toStartOf="@+id/notes"
                app:layout_constraintTop_toBottomOf="@+id/notes"
                tools:text="@string/not_specified" />

            <TextView
                android:id="@+id/lat_long"
                style="@style/DetailsInfo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="@+id/date_and_time"
                app:layout_constraintStart_toStartOf="@+id/date_and_time"
                app:layout_constraintTop_toBottomOf="@+id/date_and_time"
                tools:text="@string/not_specified" />

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="24dp"
                app:layout_constraintDimensionRatio="0.5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lat_long" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/play_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:contentDescription="@string/describe_fab_play"
        app:srcCompat="@drawable/ic_play"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>